Get rid of warnings, use generics, cleanup sources